Update Bach's build program